# Mellon

./: .gitignore  README.md  config.example.ini  main.py  pyproject.toml  requirements.txt  requirements_extras.txt  requirements_quant.txt  run.sh
custom/Example/: __init__.py  main.py
data/: .gitkeep
data/graphs/mellon/: Flux Kontext Nunchaku.json  SD3 Float8.json
data/graphs/modular_diffusers/: dynamic_node.json  i2i.json  image_to_image.json  multiple_image_edit.json  quantization.json  text_to_image.json
mellon/: NodeBase.py  client.py  config.py  modelstore.py  server.py
modules/: __init__.py
modules/BaseMesh/: BaseMesh.py  __init__.py
modules/BasicImage/: BasicImage.py
modules/Color/: main.py
modules/Experiments/: FLUXKontext.py  StableDiffusion3.py  StableDiffusionXL.py  VAE.py  __init__.py  flux_layers.py  main.py  sd3_layers.py  t5_layers.py  utils.py
modules/Image/: main.py
modules/ImageFilters/: __init__.py  main.py
modules/ModularDiffusers/: README.md  __init__.py  adapters.py  controlnet.py  custom.py  denoise.py  dynamic_node.py  embeddings.py  guiders.py  latents.py  loaders.py  main.py  modular_utils.py  outputs.py  schedulers.py  utils.py
modules/Primitive/: main.py
modules/SDExperiments/: StableDiffusion3.py  VAE.py  __init__.py  main.py  utils.py
modules/Segmentation/: main.py
modules/Spandrel/: __init__.py  main.py
modules/Tensor/: main.py
modules/Text/: Text.py  __init__.py  main.py
modules/Video/: main.py
utils/: huggingface.py  image.py  memory_menager.py  paths.py  quantization.py  spline.py  torch_utils.py
web/: index.html
web/assets/: UIThreePreview-DgL98Whk.js  UIThreePreview-pJpFFSim.js  index-Bskve9ch.js  index-C8JsbSZQ.js  index-CEcMDQLJ.css  index.css  index.js
web/user/: ExampleField.js
